kustomize/portal/deployment.yaml
# Copyright (c) 2022, Nadun De Silva. All Rights Reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#   http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: portal
  name: portal
spec:
  selector:
    matchLabels:
      component: portal
  template:
    metadata:
      labels:
        component: portal
    spec:
      containers:
      - image: nadunrds/samples-fabric-shop-portal
        name: portal
        ports:
        - name: portal
          containerPort: 8080
        resources:
          limits:
            cpu: "500m"
            memory: 0.5Gi
          requests:
            cpu: "300m"
            memory: 0.2Gi
        securityContext:
          capabilities:
            drop:
            - ALL
        startupProbe:
          httpGet:
            path: /
            port: portal
          timeoutSeconds: 5
          initialDelaySeconds: 3
          periodSeconds: 1
          failureThreshold: 20
        livenessProbe:
          httpGet:
            path: /
            port: portal
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: portal
          periodSeconds: 3
